force-app/main/default/objects/Operations_Department__c/Operations_Department__c.object-meta.xml
<CustomObject>
    <label>Operations Department</label>
    <nameField>
        <displayFormat>OD-{000}</displayFormat>
        <label>Operations Department ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations Departments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>