force-app/main/default/objects/Operations_Department__c/fields/Current_Due_Date_for_New_P1__c.field-meta.xml
<CustomField>
    <fullName>Current_Due_Date_for_New_P1__c</fullName>
    <formula>NOW() +  P1_Offset_Days__c</formula>
    <label>Current Due Date for New P1</label>
    <type>DateTime</type>
</CustomField>