force-app/main/default/objects/Operations_Department__c/fields/Current_Due_Date_for_New_P3__c.field-meta.xml
<CustomField>
    <fullName>Current_Due_Date_for_New_P3__c</fullName>
    <formula>NOW() + P3_Offset_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Due Date for New P3</label>
    <type>DateTime</type>
</CustomField>