force-app/main/default/objects/Operations_Department__c/fields/Escalation_point_1__c.field-meta.xml
<CustomField>
    <fullName>Escalation_point_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation point 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations_Departments</relationshipName>
    <type>Lookup</type>
</CustomField>