force-app/main/default/objects/Operations_Department__c/fields/P1_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>P1_Offset_Days__c</fullName>
    <defaultValue>2</defaultValue>
    <description>When a new Incident comes in how may days from now to assign the due by date</description>
    <label>P1 Offset Days</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>