force-app/main/default/objects/Operations_Department__c/fields/P2_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>P2_Offset_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <label>P2 Offset Days</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>