force-app/main/default/objects/Operations_Department__c/fields/P3_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>P3_Offset_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <label>P3 Offset Days</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>