force-app/main/default/objects/Operations_Department__c/fields/Unique_Department__c.field-meta.xml
<CustomField>
    <fullName>Unique_Department__c</fullName>
    <description>This is a unique field that ensures a village can only have one instance of a department</description>
    <label>Unique Department</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>