force-app/main/default/objects/Operations_Department__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Village__c</columns>
    <columns>Escalation_point_1__c</columns>
    <columns>Escalation_point_2__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>P1_Offset_Days__c</columns>
    <columns>P2_Offset_Days__c</columns>
    <columns>P3_Offset_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>