force-app/main/default/objects/Operations_Department__c/listViews/Bicester_Departments.listView-meta.xml
<ListView>
    <fullName>Bicester_Departments</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Village__c</columns>
    <columns>Escalation_point_1__c</columns>
    <columns>Escalation_point_2__c</columns>
    <columns>Escalation_point_3__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <label>Bicester Departments</label>
</ListView>