force-app/main/default/objects/Operations_Department__c/listViews/Ops_Bicester_Landscaping_Operations_Department.listView-meta.xml
<ListView>
    <fullName>Ops_Bicester_Landscaping_Operations_Department</fullName>
    <filterScope>Queue</filterScope>
    <label>Ops Bicester Landscaping</label>
    <queue>Ops_Bicester_Landscaping</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>